--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,152 @@
     transform: rotate(360deg);
   }
 }
+/* ------------------ */
+
+::-webkit-scrollbar-track {
+  background-color:  #449663 ;
+  border-radius: 10px;
+}
+
+/* ползунок скроллбара */ 
+::-webkit-scrollbar-thumb {
+  background-color: #e3c934 ;
+  border-radius: 10px;
+  border: 1px solid #449663;
+}
+
+.box {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  background-color: #44bd72;
+  padding: 10px 15px;
+  height: 100vh;
+  overflow: hidden; 
+}
+
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+  gap: 20px;
+  margin-bottom: 15px;
+}
+
+.task__wrapper {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: calc(100vh - 200px);
+    padding: 20px;  
+}
+
+@media screen and (min-width: 501px) {
+  .task__wrapper {
+    height: calc(100vh - 108px);
+}
+}
+
+.task__wrapper::-webkit-scrollbar {
+  padding: 5px 10px;
+  width: 15px; /* ширина для вертикального скролла */
+  height: 8px; /* высота для горизонтального скролла */
+}
+
+
+
+/* ------------------ */
+
+
+/* Reset and base styles  */
+* {
+	padding: 0px;
+	margin: 0px;
+	border: none;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+/* Links */
+
+a, a:link, a:visited  {
+    text-decoration: none;
+}
+
+a:hover  {
+    text-decoration: none;
+}
+
+/* Common */
+
+aside, nav, footer, header, section, main {
+	display: block;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    font-size: inherit;
+	font-weight: inherit;
+}
+
+ul, ul li {
+	list-style: none;
+}
+
+img {
+	vertical-align: top;
+}
+
+img, svg {
+	max-width: 100%;
+	height: auto;
+}
+
+address {
+  font-style: normal;
+}
+
+/* Form */
+
+
+input::-ms-clear {
+	display: none;
+}
+
+button, input[type="submit"] {
+    display: inline-block;
+    box-shadow: none;
+    cursor: pointer;
+}
+
+input:focus, input:active,
+button:focus, button:active {
+    outline: none;
+}
+
+button::-moz-focus-inner {
+	padding: 0;
+	border: 0;
+}
+
+label {
+	cursor: pointer;
+}
+
+legend {
+	display: block;
+}
+
+/* ===============стрелочки у input number============ */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+
